--- a/Main.css
+++ b/Main.css
@@ -12,11 +12,19 @@ body {
     background-color: rgb(255, 255, 255);
 }
 
-img {
+#logo_ASRE49 {
     height: 4em;
     position: absolute;
     top: 2em;
     left: 1em;
+}
+
+.deco {
+    max-height: 10em;
+    max-width: 21vw;
+    position: absolute;
+    top: 0em;
+    right: 0em;
 }
 
 h1 {
@@ -69,6 +77,7 @@ fieldset {
 
 .question {
     font-size: 1.1em;
+    margin-top: 0.5em;
 }
 
 label {
@@ -109,10 +118,16 @@ button {
     border-radius: 0.1em;
     padding: 0.3em 0.5em;
     margin: 0.3em;
+    font-size: 1.1em;
+
 }
 button:hover {
     background-color: rgb(67, 136, 244);
     color: white;
+}
+
+#sauvegarder {
+    margin-left: 2em;       /*écarter les 2 bouttons du bord gauche*/
 }
 
 /*///----------------- Viewport < 980px ----------------///*/
