--- a/Accueil.css
+++ b/Accueil.css
@@ -1,5 +1,6 @@
-#boutonQuest {
-    margin-top: 4em;
+#ligne {
+    margin: 3em 1em 2em;
+    border-top: 0.1em solid rgb(69, 216, 138);
 }
 
 p {
@@ -18,15 +19,15 @@ p {
 .logo {
     display: inline-block;
     width: 15em;
-    margin: 1em auto;
+    margin: 0em auto;
 }
 
-a.truc {
+a.boutonsAccueil {
     display: block;
     position: relative;
     width: 20em;
-    background-color: rgb(67, 136, 244);
-    border: 0.15em solid rgb(67, 136, 244);
+    background-color: rgb(3, 0, 105);
+    border: 0.15em solid rgb(3, 0, 105);
     border-radius: 0.1em;
     color: rgb(255, 255, 255);
     text-align: center;
@@ -35,12 +36,12 @@ a.truc {
     margin: 1em auto;
     font-size: 1.1em;
 }
-a.truc:hover {
+a.boutonsAccueil:hover {
     display: block;
     background-color: rgb(255, 255, 255);
-    border: 0.15em solid rgb(67, 136, 244);
+    border: 0.15em solid rgb(3, 0, 105);
     border-radius: 0.1em;
-    color: rgb(67, 136, 244);
+    color: rgb(3, 0, 105);
     /*padding: 1em 0.5em;
     margin: 1em;
     font-size: 1.1em;*/
