--- a/Main.css
+++ b/Main.css
@@ -1,6 +1,4 @@
-/*bleu google rgb(67, 136, 244)
-vert google rgb(33, 164, 102)
-jaune google rgb(255, 225, 80)
+/*
 https://fr.qr-code-generator.com/a1/?msclkid=16fbc285ccae192bb585a16ebf6222d4&AdId=71674624435442&BidMatchType=be&CampaignId=431126805&TargetId=kwd-71675141929826:loc-66&QueryString=qr%20code%20gratuit&IfSearch:string=string&keyword=cr%C3%A9er%20un%20qr%20code%20gratuit&MatchType=e&AdGroupId=1146791572208505&cpid=2f9edc9f-4d94-4d4a-9de9-0274209e84f5&utm_source=bing&utm_medium=cpc&utm_campaign=FR%20-%20QR%20Code%20Global&utm_term=cr%C3%A9er%20un%20qr%20code%20gratuit&utm_content=FR%20-%20QR%20Code%20Global
 vert ASRE #45D88A  rgb(69, 216, 138)
 bleu clair ASRE #2B9CFC  rgb(43, 156, 252)
@@ -17,16 +15,25 @@ body {
     background-color: rgb(255, 255, 255);
 }
 
-#logo_ASRE49 {
-    height: 5em;
+.logo_ASRE49_horiz {
+    max-height: 5em;
     position: absolute;
     top: 1em;
     left: 1em;
 }
 
+.logo_ASRE49_verti {
+    visibility: hidden;
+    max-height: 8em;
+    max-width: 14vw;
+    position: absolute;
+    top: 1em;
+    left: 0.5em;
+}
+
 .deco {
     max-height: 8em;
-    max-width: 21vw;
+    max-width: 17vw;
     position: absolute;
     top: 0em;
     right: -0.1em;
@@ -168,12 +175,21 @@ button:hover {
     margin-left: 2em;       /*écarter les 2 bouttons du bord gauche*/
 }
 
-/*///----------------- Viewport < 980px ----------------///*/
-@media screen and (max-width: 980px) {
+/*///----------------- Viewport < 1015px ----------------///*/
+@media screen and (max-width: 1015px) {
+    /*1 question par ligne*/
     fieldset {
         display: inline-block;
         width: 85%;
         margin: 0.5em 1em;
+    }
+
+    /*Change pour le logo vertical*/
+    .logo_ASRE49_horiz {
+        visibility: hidden;
+    }
+    .logo_ASRE49_verti {
+        visibility: visible;
     }
 }
 
@@ -199,13 +215,10 @@ p:has(a) {
     text-align: center;
 }
 
-a:link {
-    color: rgb(43, 156, 252);
+a:link, a:visited {
+    color: rgb(69, 216, 138);
     font-size: 1.4em;
 }
-a:visited {
-    color: rgb(43, 156, 252);
-}
 a:hover {
-    color: rgb(69, 216, 138);
+    color: rgb(3, 0, 105);
 }
